--- a/.github/workflows/release-binaries-arm64.yml
+++ b/.github/workflows/release-binaries-arm64.yml
@@ -11,4 +11,4 @@ jobs:
       contents: write
     with:
       arch: arm64
-      runner: github-hosted-ubuntu-arm64
+      runner: ubuntu-24.04-arm
